# receipt-processor-challenge

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
api/: main.py  validation.py
api/routes/: receipts.py
tests/: conftest.py
tests/api/routes/: test_receipts.py
