[project]
name = "receipt-processor-challenge"
version = "0.1.0"
description = "A simple receipt processor"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]==0.115.5",
    "pydantic==2.9.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy[faster-cache]>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pre-commit>=4.0.1",
]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.pydocstyle]
convention = "google"
